# et-stopwatch

./: .gitignore  API.rst  README.rst  et_stopwatch.py  micc.json  pyproject.toml
docs/: Makefile  conf.py  index.rst
et_stopwatch/: __init__.py
tests/: __init__.py  test_et_stopwatch.py
